1.left-sidebar & center-products done. 2.Add line-behind-title-text. 3.Add accordion. 4.Add pagination. 5.justify Center Products content.

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div class="container">
+        <!--Navbar Top-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="#">MAGIC</a>
 
@@ -48,6 +49,7 @@
 
             </div>
         </nav>
+        <!--Carousel-->
         <div id="caroudelIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#caroudelIndicators" data-slide-to="0" class="active"></li>
@@ -74,51 +76,169 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <!-- <div class="jumbotron">
-            <h1 class="display-4">Simple. Elegant. Awesome</h1>
-            <P class="lead">Berlin, Germany’s capital, dates to the 13th century. Reminders of the city's turbulent
-                20th-century
-                history include its Holocaust memorial and the Berlin Wall's graffitied remains. Divided during the
-                Cold War, its 18th-century Brandenburg Gate has become a symbol of reunification. The city's also known
-                for its art scene and modern landmarks like the gold-colored, swoop-roofed Berliner Philharmonie, built
-                in 1963.</P>
-            <hr class="my-4">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </div> -->
+        <!--Content-->
+        <div class="container">
+            <div class="row">
+                <!--left sidebar-->
+                <div class="col-lg-3">
+                    <div class="line-behind-title-text">
+                        <h2 class="background"><span>Category</span></h2>
+                        <div class="accordion" id="accordionExample">
+                            <div class="card">
+                                <div class="card-header" id="headingOne">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                                            aria-expanded="true" aria-controls="collapseOne">
+                                            Collapsible Group Item #1
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                    <div class="mt-3">
+                                        <ul class="none-bullet">
+                                            <li><a class="under-line" href="#">Reports</a></li>
+                                            <li><a href="#">Search</a></li>
+                                            <li><a href="#">Graphs</a></li>
+                                            <li><a href="#">Settings</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header" id="headingTwo">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                            data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                            Collapsible Group Item #2
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
 
-        <div class="row mt-4">
-            <div class="col-sm-12 col-md-4">
-                <div class="card mb-4">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Boreal Griffin</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header" id="headingThree">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                            data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                            Collapsible Group Item #3
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        Anim pariatur cliche reprehenderi
 
-            <div class="col">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Boreal Griffin</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Another link</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Boreal Griffin</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Another link</a>
+                <!--Center Products-->
+                <div class="col-lg-9">
+                    <div class="line-behind-title-text">
+                        <h2 class="background"><span>Products</span></h2>
+                        <div class="row  mb-4">
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <div>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                                <li class="page-item"><a class="page-link" href="#">6</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </nav>
+                    </div>
+
                 </div>
+
+                <!--Commercial-->
             </div>
         </div>
+
+
 
         <div class="row mt-sm-4 mt-md-0">
             <div class="col-sm-12 col-md-8 text-center text-md-left">
