--- a/src/index.html
+++ b/src/index.html
@@ -86,15 +86,12 @@
                         <div class="accordion" id="accordionExample">
                             <div class="card">
                                 <div class="card-header" id="headingOne">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                                            aria-expanded="true" aria-controls="collapseOne">
-                                            Collapsible Group Item #1
-                                        </button>
-                                    </h5>
+                                    <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                                        Collapsible Group Item #1
+                                    </a>
                                 </div>
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                    <div class="mt-3">
+                                    <div>
                                         <ul class="none-bullet">
                                             <li><a class="under-line" href="#">Reports</a></li>
                                             <li><a href="#">Search</a></li>
@@ -106,33 +103,35 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" id="headingTwo">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                            data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            Collapsible Group Item #2
-                                        </button>
-                                    </h5>
+                                    <a class="card-link" data-toggle="collapse" href="#collapseTwo">
+                                        Collapsible Group Item #2
+                                    </a>
                                 </div>
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-
+                                    <div>
+                                        <ul class="none-bullet">
+                                            <li><a class="" href="#">Reports</a></li>
+                                            <li><a href="#">Search</a></li>
+                                            <li><a href="#">Graphs</a></li>
+                                            <li><a href="#">Settings</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header" id="headingThree">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                            data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            Collapsible Group Item #3
-                                        </button>
-                                    </h5>
+                                    <a class="card-link" data-toggle="collapse" href="#collapseThree">
+                                        Collapsible Group Item #3
+                                    </a>
                                 </div>
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        Anim pariatur cliche reprehenderi
-
+                                    <div>
+                                        <ul class="none-bullet">
+                                            <li><a class="" href="#">Reports</a></li>
+                                            <li><a href="#">Search</a></li>
+                                            <li><a href="#">Graphs</a></li>
+                                            <li><a href="#">Settings</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +214,7 @@
                                         <span class="sr-only">Previous</span>
                                     </a>
                                 </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
                                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                                 <li class="page-item"><a class="page-link" href="#">4</a></li>
