--- a/src/tmp.html
+++ b/src/tmp.html
@@ -1,68 +1,274 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
-
     <div class="container">
-        <h2>Accordion Example</h2>
-        <p><strong>Note:</strong> The <strong>data-parent</strong> attribute makes sure that all collapsible elements
-            under the specified parent will be closed when one of the collapsible item is shown.</p>
-        <div id="accordion">
-            <div class="card">
-                <div class="card-header">
-                    <a class="card-link" data-toggle="collapse" href="#collapseOne">
-                        Collapsible Group Item #1
-                    </a>
+        <!--Navbar Top-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">MAGIC</a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">Products</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Product 1</a>
+                            <a class="dropdown-item" href="#">Product 2</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </nav>
+        <!--Carousel-->
+        <div id="caroudelIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#caroudelIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#caroudelIndicators" data-slide-to="1"></li>
+                <li data-target="#caroudelIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="assets/img/m1.png" alt="First slide">
                 </div>
-                <div id="collapseOne" class="collapse" data-parent="#accordion">
-                    <ul>
-                        <li><a href="#">Reports</a></li>
-                        <li><a href="#">Search</a></li>
-                        <li><a href="#">Graphs</a></li>
-                        <li><a href="#">Settings</a></li>
-                    </ul>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/img/m4.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/img/m3.png" alt="Third slide">
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header">
-                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-                        Collapsible Group Item #2
-                    </a>
-                </div>
-                <div id="collapseTwo" class="collapse" data-parent="#accordion">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
+            <a class="carousel-control-prev" href="#caroudelIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previos</span>
+            </a>
+            <a class="carousel-control-next" href="#caroudelIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!--Content-->
+        <div class="container">
+            <div class="row">
+                <!--left sidebar-->
+                <div class="col-lg-3">
+                    <div class="line-behind-title-text">
+                        <h2 class="background"><span>Category</span></h2>
+                        <div id="accordion">
+                            <div class="card">
+                                <div class="card-header">
+                                    <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                                        Collapsible Group Item #1
+                                    </a>
+                                </div>
+                                <div id="collapseOne" class="collapse" data-parent="#accordion">
+                                    <ul>
+                                        <li><a href="#">Reports</a></li>
+                                        <li><a href="#">Search</a></li>
+                                        <li><a href="#">Graphs</a></li>
+                                        <li><a href="#">Settings</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+                                        Collapsible Group Item #2
+                                    </a>
+                                </div>
+                                <div id="collapseTwo" class="collapse" data-parent="#accordion">
+                                    <div class="card-body">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                                        Collapsible Group Item #3
+                                    </a>
+                                </div>
+                                <div id="collapseThree" class="collapse" data-parent="#accordion">
+                                    <div class="card-body">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <!--Center Products-->
+                <div class="col-lg-9">
+                    <div class="line-behind-title-text">
+                        <h2 class="background"><span>Products</span></h2>
+                        <div class="row  mb-4">
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <div class="card">
+                                    <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Boreal Griffin</h5>
+                                        <p class="card-text">$22.00</p>
+                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                                <li class="page-item"><a class="page-link" href="#">6</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </nav>
+                    </div>
+
+                </div>
+
+                <!--Commercial-->
             </div>
-            <div class="card">
-                <div class="card-header">
-                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-                        Collapsible Group Item #3
-                    </a>
-                </div>
-                <div id="collapseThree" class="collapse" data-parent="#accordion">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
+        </div>
+
+
+
+        <div class="row mt-sm-4 mt-md-0">
+            <div class="col-sm-12 col-md-8 text-center text-md-left">
+                <h3>Spacing utilities that apply to all breakpoints</h3>
+                <p class="lead">This is because those classes are applied from min-width: 0 and up, and thus are not
+                    bound by a media query. </p>
+                <p>Additionally, Bootstrap also includes an .mx-auto class for horizontally centering fixed-width block
+                    level content—that is, content that has display: block and a width set—by setting the horizontal
+                    margins to auto.</p>
+                <p> Includes support for individual properties, all properties, and vertical and horizontal properties.
+                    Classes are built from a default Sass map ranging from .25rem to 3rem.</p>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <h3 class="mb-4">Secondary Menu</h3>
+                <ul class="nav flex-column nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Jersey</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Shoesss</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Others</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
 
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
