start commercial wall

--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <!--Center Products-->
-                <div class="col-lg-9">
+                <div class="col-lg-7">
                     <div class="line-behind-title-text">
                         <h2 class="background"><span>Products</span></h2>
                         <div class="row  mb-4">
@@ -234,6 +234,19 @@
                 </div>
 
                 <!--Commercial-->
+                <div class="col-lg-2">
+                    <div class="row mt-3">
+                        <div class="col">
+                            <img src="assets/img/commercial_1.jpg" alt="" class="">
+                        </div>
+                        <div class="col">
+                            <img src="assets/img/commercial_2.jpg" alt="" class="">
+                        </div>
+                        <div class="col">
+                            <img src="assets/img/commercial_3.jpg" alt="" class="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
